Add GET /boostRequests/{boostRequestId}
